samples/_failures_safe/1761409667_e21300_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe5af660.c: In function ‘main’:
./samples/SAFE/__tmp_fe5af660.c:127:16: error: missing terminating " character
  127 |         printf("Rotation does not preserve vector magnitude (numer
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fe5af660.c:127:9: error: expected expression at end of input
  127 |         printf("Rotation does not preserve vector magnitude (numer
      |         ^~~~~~
./samples/SAFE/__tmp_fe5af660.c:127:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fe5af660.c:127:9: error: expected declaration or statement at end of input
